--- a/HotelManagement/HotelManagement/Views/Reservation/ReservationListView.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/ReservationListView.xaml
@@ -37,7 +37,7 @@
                     x:Name="RadioButtonGroupChoiceChipPrimary">
                     <ListBoxItem IsSelected="True" Content="ALL" />
 
-                    <ListBoxItem>
+                    <ListBoxItem x:Name="ArrivalChip">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="AirplaneLanding"/>
                             <TextBlock Margin="5,0,0,0" Text="ARRIVAL" VerticalAlignment="Center"/>
@@ -187,26 +187,32 @@
                                    BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
                                 <Setter Property="VerticalAlignment" Value="Center"/>
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>
+                                <Setter Property="FontWeight" Value="Bold"/>
+                                <Style.Triggers>
+                                    <Trigger Property="Text" Value="On Request">
+                                        <Setter Property="Foreground" Value="DarkOrange"/>
+                                    </Trigger>
 
-                    <DataGridTextColumn
-                        Header="Rooms" Binding="{Binding Rooms}"
-                        IsReadOnly="True">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}"
-                                   BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
+                                    <Trigger Property="Text" Value="Confirmed">
+                                        <Setter Property="Foreground" Value="Yellow"/>
+                                    </Trigger>
 
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="{x:Type TextBlock}"
-                                   BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    <Trigger Property="Text" Value="Operational">
+                                        <Setter Property="Foreground" Value="DeepSkyBlue"/>
+                                    </Trigger>
+
+                                    <Trigger Property="Text" Value="Cancelled">
+                                        <Setter Property="Foreground" Value="Red"/>
+                                    </Trigger>
+
+                                    <Trigger Property="Text" Value="No Show">
+                                        <Setter Property="Foreground" Value="Gray"/>
+                                    </Trigger>
+
+                                    <Trigger Property="Text" Value="Completed">
+                                        <Setter Property="Foreground" Value="LightGreen"/>
+                                    </Trigger>
+                                </Style.Triggers>
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
@@ -253,6 +259,26 @@
 
                     <DataGridTextColumn
                         Header="Departure date" Binding="{Binding Departure}"
+                        IsReadOnly="True">
+                        <DataGridTextColumn.HeaderStyle>
+                            <Style TargetType="{x:Type DataGridColumnHeader}"
+                                   BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </DataGridTextColumn.HeaderStyle>
+
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="{x:Type TextBlock}"
+                                   BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+
+                    <DataGridTextColumn
+                        Header="Rooms" Binding="{Binding Rooms}"
                         IsReadOnly="True">
                         <DataGridTextColumn.HeaderStyle>
                             <Style TargetType="{x:Type DataGridColumnHeader}"
