--- a/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
@@ -71,7 +71,7 @@
 
                                 <TextBox
                                     Grid.Row="0" Grid.Column="1"
-                                    FontSize="14" Width="230"
+                                    FontSize="14" Width="230" Margin="0,3,0,3"
                                     Text="{Binding Path=GuestInformation.ID}"
                                     Style="{StaticResource MaterialDesignTextBox}"
                                     materialDesign:TextFieldAssist.HasClearButton="True"
@@ -90,7 +90,7 @@
                                     Text="Gender" FontSize="16"/>
 
                                 <ComboBox
-                                    Grid.Row="0" Grid.Column="4" Width="100"
+                                    Grid.Row="0" Grid.Column="4" Width="100" Margin="0,3,0,3"
                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                                     materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"
                                     materialDesign:ColorZoneAssist.Mode="SecondaryLight"
@@ -108,7 +108,7 @@
 
                                 <TextBox
                                     Grid.Row="2" Grid.Column="1"
-                                    FontSize="14" Width="230"
+                                    FontSize="14" Width="230" Margin="0,3,0,3"
                                     Style="{StaticResource MaterialDesignTextBox}"
                                     Text="{Binding Path=GuestInformation.Name}"
                                     materialDesign:TextFieldAssist.HasClearButton="True"
@@ -141,7 +141,7 @@
 
                                 <TextBox 
                                     Grid.Row="4" Grid.Column="1"
-                                    FontSize="14" Width="230" 
+                                    FontSize="14" Width="230" Margin="0,3,0,3"
                                     Text="{Binding Path=GuestInformation.Email}"
                                     Style="{StaticResource MaterialDesignTextBox}"
                                     materialDesign:TextFieldAssist.HasClearButton="True"
@@ -155,7 +155,7 @@
 
                                 <TextBox 
                                     Grid.Row="4" Grid.Column="4"
-                                    FontSize="14" Width="100"
+                                    FontSize="14" Width="100" Margin="0,3,0,3"
                                     Text="{Binding Path=GuestInformation.Phone}"
                                     Style="{StaticResource MaterialDesignTextBox}"
                                     materialDesign:TextFieldAssist.HasClearButton="True"
@@ -175,7 +175,7 @@
 
                                 <TextBox
                                     Grid.Row="6" Grid.Column="1"
-                                    FontSize="14" Width="230"
+                                    FontSize="14" Width="230" Margin="0,3,0,3"
                                     Text="{Binding Path=GuestInformation.Address}"
                                     Style="{StaticResource MaterialDesignTextBox}"
                                     materialDesign:TextFieldAssist.HasClearButton="True"
@@ -226,7 +226,7 @@
 
                                 <DatePicker
                                     Grid.Column="2" Width="90"
-                                    Margin="0,0,20,0" FontSize="14"
+                                    Margin="0,3,20,3" FontSize="14"
                                     SelectedDate="{Binding Path=StayInformation.Arrival, UpdateSourceTrigger=PropertyChanged}"
                                     materialDesign:HintAssist.Hint="Pick a date"
                                     materialDesign:HintAssist.IsFloating="False"/>
@@ -238,7 +238,7 @@
 
                                 <DatePicker 
                                     Grid.Row="2" Grid.Column="2" 
-                                    Width="90" Margin="0,0,20,0" FontSize="14"
+                                    Width="90" Margin="0,3,20,3" FontSize="14"
                                     SelectedDate="{Binding Path=StayInformation.Departure, UpdateSourceTrigger=PropertyChanged}"
                                     materialDesign:HintAssist.Hint="Pick a date"
                                     materialDesign:HintAssist.IsFloating="False"/>
@@ -249,8 +249,38 @@
                                     Text="Status" FontSize="16"/>
 
                                 <TextBlock 
-                                    Grid.Row="4" Grid.Column="2"
-                                    Text="{Binding StayInformation.Status}" FontSize="16"/>
+                                    Grid.Row="4" Grid.Column="2" Margin="0,3,0,3"
+                                    Text="{Binding StayInformation.Status}" FontSize="16">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Style.Triggers>
+                                                <Trigger Property="Text" Value="On Request">
+                                                    <Setter Property="Foreground" Value="DarkOrange"/>
+                                                </Trigger>
+
+                                                <Trigger Property="Text" Value="Confirmed">
+                                                    <Setter Property="Foreground" Value="Yellow"/>
+                                                </Trigger>
+
+                                                <Trigger Property="Text" Value="Operational">
+                                                    <Setter Property="Foreground" Value="DeepSkyBlue"/>
+                                                </Trigger>
+
+                                                <Trigger Property="Text" Value="Cancelled">
+                                                    <Setter Property="Foreground" Value="Red"/>
+                                                </Trigger>
+
+                                                <Trigger Property="Text" Value="No Show">
+                                                    <Setter Property="Foreground" Value="Gray"/>
+                                                </Trigger>
+
+                                                <Trigger Property="Text" Value="Completed">
+                                                    <Setter Property="Foreground" Value="LightGreen"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
 
                                 <!--Stays-->
                                 <TextBlock 
@@ -577,13 +607,13 @@
 
                     <StackPanel Grid.Column="2" Orientation="Horizontal">
                         <Button 
-                            Margin="15,0,0,0" Width="70"
+                            Margin="15,0,0,0" Width="80"
                             Visibility="{Binding CanEdit, Converter={StaticResource BoolToVisibilityConverter}}"
                             Content="Save" Command="{Binding SaveDataCommand}"
                             CommandParameter="{Binding ElementName=windowReservationDetails}"/>
                         
                         <Button 
-                            Margin="15,0,0,0" Width="70"
+                            Margin="15,0,0,0" Width="80"
                             Command="{Binding CancelCommand}"
                             CommandParameter="{Binding ElementName=windowReservationDetails}"
                             Content="Cancel" BorderThickness="1.5"
