--- a/HotelManagement/HotelManagement/Views/Reservation/ReservationListView.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/ReservationListView.xaml
@@ -371,43 +371,7 @@
         </Grid>
 
         <Grid Grid.Row="4" Margin="0,5,0,10">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button 
-                    Margin="5,0,5,0"
-                    Command="{Binding PageNavigationViewModel.FirstPageCommand}"
-                    Style="{StaticResource MaterialDesignRaisedButton}"
-                    materialDesign:ButtonAssist.CornerRadius="15">
-                    <materialDesign:PackIcon Kind="FirstPage" VerticalAlignment="Center"/>
-                </Button>
-
-                <Button 
-                    Margin="5,0,5,0" 
-                    Command="{Binding PageNavigationViewModel.PreviousPageCommand}"
-                    materialDesign:ButtonAssist.CornerRadius="15">
-                    <materialDesign:PackIcon Kind="ArrowLeft"/>
-                </Button>
-
-                <Button
-                    Margin="5,0,5,0" 
-                    Content="{Binding PageNavigationViewModel.PageTitle}"
-                    Style="{StaticResource MaterialDesignOutlinedDarkButton}"
-                    BorderThickness="1.5" materialDesign:ButtonAssist.CornerRadius="15">
-                </Button>
-
-                <Button 
-                    Margin="5,0,5,0" 
-                    Command="{Binding PageNavigationViewModel.NextPageCommand}"
-                    materialDesign:ButtonAssist.CornerRadius="15">
-                    <materialDesign:PackIcon Kind="ArrowRight"/>
-                </Button>
-
-                <Button 
-                    Margin="5,0,5,0" 
-                    Command="{Binding PageNavigationViewModel.LastPageCommand}"
-                    materialDesign:ButtonAssist.CornerRadius="15">
-                    <materialDesign:PackIcon Kind="LastPage"/>
-                </Button>
-            </StackPanel>
+            <local:PageNavigationView/>
         </Grid>
     </Grid>
 </UserControl>
